# mathstrad

./: .gitignore  CMakeLists.txt  Languages.h  README.md  Translator.cpp  Translator.h  main.cpp  utils.cpp  utils.h
jsonparser/: json.h
src/: CMakeLists.txt  Translator.cpp  Translator.h  utils.cpp  utils.h
tests/: CMakeLists.txt  TranslatorTest.cpp
